--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   width: 100vh;
   height: 100vh;
 
-  background-image: linear-gradient(#000000, #111111);
+  background-image: linear-gradient(to bottom right, #222222, #000000);
 }
 
 .column{
@@ -38,8 +38,9 @@
 }
 
 .keypad-button{
-  width: 20%;
+  width: 25%;
   height: 50px;
+  background-image: linear-gradient(to top right, white, #eeeeee);
   background-color: white;
   border-style: none;
 }
@@ -47,6 +48,7 @@
 .result{
   color: brown;
   margin-top: 30%;
+  background-image: linear-gradient(to bottom right, beige, white);
   background-color: beige;
   height: 10%;
   width: flex;
