--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
 
   background-image: linear-gradient(to bottom right, #222222, #000000);
@@ -16,7 +16,8 @@
 }
 
 .middle{
-    width: 60%;
+    width: 40%;
+    margin-left: 10%;
 }
 
 .middle button{
